--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
-/* * {
-  margin: 0;
-  padding: 0;
-} */
-
-.App {
-  text-align: center;
+body{
+  margin:0;
+  padding:0;
+  background-color: #f1f1f1;
+  
 }
